--- a/contacto.html
+++ b/contacto.html
@@ -6,6 +6,7 @@
     <title>contacto</title>
 </head>
 <body>
-  <h1>Correo: thecanales23@gmail.com</h1>  
+  <h1>Correo: thecanales23@gmail.com</h1> 
+  <p>Dev jr</p> 
 </body>
 </html>
